--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "@babel/preset-env": "^7.3.4",
     "autoprefixer": "^9.4.9",
     "cpx": "^1.5.0",
+    "eslint": "^5.15.0",
     "node-sass": "^4.11.0",
     "postcss": "^7.0.14",
     "rimraf": "^2.6.3",
-    "uglifyjs": "^2.4.11"
+    "uglify-es": "^3.3.9"
   },
   "browserslist": {
     "development": [
@@ -37,7 +38,5 @@
       "last 2 versions"
     ]
   },
-  "dependencies": {
-    "eslint": "^5.15.0"
-  }
+  "dependencies": {}
 }
