--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A personal website for Nick Mykkanen",
   "main": "index.js",
   "scripts": {
-    "clean": "rimraf ./dist && mkdir dist && rimraf ./temp && mkdir temp",
+    "clean": "rimraf ./dist && rimraf ./temp && mkdir temp dist dist/js dist/css",
     "compile": "babel src/js/script.js --presets=@babel/env | uglifyjs > dist/js/script.js && node-sass src/scss/style.scss ./temp/style.css --output-style compressed && postcss --use autoprefixer --no-map -o ./temp/style.css ./dist/css/style.compiled.css",
     "prebuild": "npm run clean && cpx src/*.html dist/",
     "build": "npm run compile",
@@ -29,6 +29,7 @@
     "eslint": "^5.15.0",
     "node-sass": "^4.11.0",
     "postcss": "^7.0.14",
+    "postcss-cli": "^6.1.2",
     "rimraf": "^2.6.3",
     "uglify-es": "^3.3.9"
   },
