--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf ./dist && rimraf ./temp && mkdir temp dist dist/js dist/css",
-    "compile": "babel src/js/script.js --presets=@babel/env | uglifyjs > dist/js/script.js && node-sass src/scss/style.scss ./temp/style.css --output-style compressed && postcss --use autoprefixer --no-map -o ./temp/style.css ./dist/css/style.compiled.css",
+    "compile": "babel src/js/script.js --presets=@babel/env | uglifyjs > dist/js/script.js && node-sass src/scss/style.scss ./temp/style.css --output-style compressed && postcss --use autoprefixer --no-map -o ./dist/css/style.compiled.css ./temp/style.css",
     "prebuild": "npm run clean && cpx src/*.html dist/",
     "build": "npm run compile",
     "postbuild": "rimraf ./temp"
